# fast-matrix-multiplication

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  demo.cpp  time_multiplication.cpp
src/: CMakeLists.txt  dynamic_peeling.hpp  matrix.hpp  multiply_bini.hpp  multiply_classic.hpp  multiply_laderman.hpp  multiply_schonhage.hpp  multiply_strassen.hpp  polynomial.hpp  timer.hpp  util.hpp
test/: CMakeLists.txt  helpers.cpp  helpers.hpp  test_bini.cpp  test_classic.cpp  test_laderman.cpp  test_schonhage.cpp  test_strassen.cpp
